# samanthi-os

./: .gitignore  Cargo.toml  README.md  build-scripts  foo
.cargo/: config.toml
assets/: anime.jpg.vga  anime2.jpg.vga  car.jpg.vga  rgb_to_vga.py  wallpaper.jpg.vga
src/: allocator.rs  cpu.rs  gdt.rs  interrupts.rs  lib.rs  logging.rs  main.rs  memory.rs  page.rs  serial.rs  vga_buffer.rs
src/acpi/: mod.rs  power.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
src/drivers/: mod.rs  network.rs  pci.rs  uart.rs  virtio.rs
src/system/net/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
